content: expand syllabus and deepen study materials
Audit of the v2 markdown modules found primer-level content across all
13 files (concepts only, no code, no complexity tables, no interview
Q&A). This change raises the most interview-leveraged modules to senior
depth and fills several gaps in the syllabus structure.

Syllabus additions (data/syllabus.ts)

- Paper 1: new module 1.4 "Advanced DSA" (Union-Find / DSU, Segment
  Trees + Fenwick / BIT, Bit Manipulation), and a Greedy topic added
  to module 1.3.
- Paper 2: new module 2.4 "Testing Strategies" (unit + integration +
  contract, test doubles + property + mutation, E2E + load).
- Paper 4: new modules 4.3 "Distributed Systems & Observability"
  (CAP / PACELC, consensus + idempotency, observability + RED + USE
  + SLO) and 4.4 "System Design Practice" (capacity estimation, four
  worked walkthroughs, senior playbook).
- New paper 6 "Senior Skills & Behavioral" with module 6.1
  "Behavioral & Communication" (STAR, scoping, technical leadership,
  disagreement / tradeoffs, failure / growth).

Module markdown changes

- New: module_1_4_advanced, module_2_4_testing, module_4_3_distributed,
  module_4_4_practice, module_6_1_behavioral. All include code
  examples, complexity / decision tables, common pitfalls, and
  interview Q&A.
- Deepened in place: module_1_3_paradigms (DP families with code +
  complexity table + space-optimisation walk-through),
  module_2_1_java (memory model fix for double-checked locking,
  collection internals, virtual threads, modern Java pattern matching),
  module_4_1_scalable_systems (consistent-hashing visualisation, Redis
  data-type table, invalidation matrix, message broker tradeoffs,
  cache stampede mitigations).

Build tracker

- Adds a "Content depth tracker" section listing which modules are
  deepened, which are new, and which are still primer-level so future
  passes can pick them up.

Lint / typecheck / build all green.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply